[tool.poetry]
name = "ata-api"
version = "0.0.1"
description = "API to serve AtA prescriptions."
license = "MIT license"
authors = ["Raaid Arshad <raaid@protonmail.com>"]
repository = "https://github.com/localAtBrown/ata-api"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.16"
ata-db-models = "0.0.16"
fastapi = "^0.93.0"
mangum = "^0.17.0"
httpx = "^0.24.0"

[tool.poetry.group.dev.dependencies]
mypy = "^0.961"
pre-commit = "^2.19.0"
pytest = "^7.1.2"
uvicorn = "0.21.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
(
  /(                        # exclude a few common directories in the
    \.git                   # root of the project
    | \.pytest_cache
    | python-venv
    | \.venv
    | build
    | dist
    | \.tox
  ))
'''

[tool.isort]
profile = "black"

[tool.mypy]
strict = "True"
files = "."
exclude = [
    '\.venv',
]

[[tool.mypy.overrides]]
# Remove any of these packages from below list once its type stubs are available
module = ["ata_db_models.helpers", "ata_db_models.models", "helpers.enums"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "ata_api.helpers.logging"
implicit_reexport = true